--- a/example/android/app/src/main/AndroidManifest.xml
+++ b/example/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.javih.add_2_calendar_example">
+    package="com.javih.add_2_calendar_new_example">
     <uses-permission android:name="android.permission.WRITE_CALENDAR" />
     <uses-permission android:name="android.permission.READ_CALENDAR" />
     <queries>
@@ -9,7 +9,7 @@
       </intent>
     </queries>
    <application
-        android:label="add_2_calendar_example"
+        android:label="add_2_calendar_new_example"
         android:icon="@mipmap/ic_launcher"
         android:name="${applicationName}"
         >
