--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,5 +1,5 @@
-name: add_2_calendar_example
-description: Demonstrates how to use the add_2_calendar plugin.
+name: add_2_calendar_new_example
+description: Demonstrates how to use the add_2_calendar_new plugin.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
@@ -12,9 +12,9 @@ dependencies:
   flutter:
     sdk: flutter
 
-  add_2_calendar:
+  add_2_calendar_new:
     # When depending on this package from a real application you should use:
-    #   add_2_calendar: ^x.y.z
+    #   add_2_calendar_new: ^x.y.z
     # See https://dart.dev/tools/pub/dependencies#version-constraints
     # The example app is bundled with the plugin so we use a path dependency on
     # the parent directory to use the current plugin's version.
