--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
-name: add_2_calendar
-description: A really simple Flutter plugin to add events to each platform's default calendar.
-version: 2.2.4
-homepage: https://github.com/ja2375/add_2_calendar
+name: add_2_calendar_new
+description: A new version for a really simple Flutter plugin to add events to each platform's default calendar.
+version: 1.0.0
+homepage: https://github.com/mauricioluz/add_2_calendar
 
 environment:
   sdk: ">=2.17.1 <4.0.0"
