--- a/android/build.gradle
+++ b/android/build.gradle
@@ -33,5 +33,13 @@ android {
     defaultConfig {
         minSdkVersion 16
     }
+     // Add these configurations
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+    kotlinOptions {
+        jvmTarget = '1.8'
+    }
 }
 
