--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ flutter:
   plugin:
     platforms:
       android:
-        package: com.javih.add_2_calendar_new
+        package: com.javih.add_2_calendar
         pluginClass: Add2CalendarPlugin
       ios:
         pluginClass: Add2CalendarPlugin
