--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: add_2_calendar_new
+name: add_2_calendar
 description: A new version for a really simple Flutter plugin to add events to each platform's default calendar.
 version: 1.0.2
 homepage: https://github.com/mauricioluz/add_2_calendar
